Faltan las páginas de busqueda, error y soporte.

--- a/css/indexCss.css
+++ b/css/indexCss.css
@@ -52,8 +52,9 @@ section h2 {
     font-size: 2rem;
     margin-bottom: 1rem;
     border-bottom: 2px solid #00ffe5;
-    display: inline-block;
+    /*display: inline-block;*/
     padding-bottom: 0.5rem;
+    width: 400px;
 }
 
 section div {
@@ -63,7 +64,7 @@ section div {
     padding: 1rem;
     border-radius: 10px;
     text-align: center;
-    width: 160px;
+    width: 250px;
     box-shadow: 0 4px 8px rgba(0, 255, 229, 0.1);
     transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
