--- a/css/artista.css
+++ b/css/artista.css
@@ -66,20 +66,51 @@ div img {
     display: block;
 }
 
+
 p {
     font-size: 1rem;
     margin-bottom: 2rem;
 }
 
 /* Secciones de canciones y álbumes */
-section {
+#canciones_po {
     margin-top: 2rem;
 }
 
-section h3 {
+#canciones_po h3 {
     font-size: 1.5rem;
     margin-bottom: 1rem;
     border-bottom: 2px solid #00ffe5;
+    display: inline-block;
+    padding-bottom: 0.5rem;
+    color: white;
+    transition: color 0.3s ease;
+}
+
+#canciones_po h3:hover {
+  
+    color: 2px solid #00ffe5;
+   
+}
+
+#albumes_po{
+
+    margin-top: 2rem;
+}
+
+#albumes_po img{
+
+    width: 200px;
+    max-width: 300px;
+    height: auto;
+    border-radius: 10px;
+    margin-bottom: 1rem;
+    display: block;
+}
+
+#albumes_po h3 {
+    font-size: 1.5rem;
+    margin-bottom: 1rem;
     display: inline-block;
     padding-bottom: 0.5rem;
 }
