--- a/css/cancion.css
+++ b/css/cancion.css
@@ -51,6 +51,17 @@ div {
     padding: 1rem;
 }
 
+div a{
+    color: #ffffff;
+    text-decoration: none;
+    font-weight: 500;
+    transition: color 0.3s ease;
+}
+
+div a:hover {
+    color: #00ffe5;
+}
+
 div h2 {
     font-size: 2.2rem;
     margin-bottom: 0.5rem;
@@ -67,16 +78,29 @@ p {
     margin: 1rem 0;
 }
 
+ #img_cancion {
+    margin: 15px;
+    display: flex;
+    float: left;
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+    border-radius: 10px;
+    margin-top: 1rem;
+    background-color: #333;
+}
+
 /* Sección álbum */
 #albumes_po {
     margin-top: 2rem;
 }
 
 #albumes_po h3 {
+    margin: 20px;
+    float: left;
     font-size: 1.5rem;
     margin-bottom: 1rem;
     border-bottom: 2px solid #00ffe5;
-    display: inline-block;
     padding-bottom: 0.3rem;
 }
 
