--- a/css/sobreNosotros.css
+++ b/css/sobreNosotros.css
@@ -51,6 +51,12 @@ nav a:hover {
     padding: 1rem;
 }
 
+img{
+    float: left;
+    width: 350px;
+    margin: 20px;
+    border-radius: 20px;
+}
 section {
     margin-bottom: 2rem;
     background-color: #1e1e1e;
