--- a/css/soporte.css
+++ b/css/soporte.css
@@ -80,6 +80,7 @@ textarea {
     background-color: #2c2c2c;
     color: #fff;
     font-size: 1rem;
+    height: 100px;
 }
 
 input[type="submit"] {
