--- a/css/cancion.css
+++ b/css/cancion.css
@@ -88,6 +88,7 @@ p {
     border-radius: 10px;
     margin-top: 1rem;
     background-color: #333;
+    margin-left: 0px;
 }
 
 /* Sección álbum */
@@ -150,3 +151,21 @@ footer {
     color: #00ffe5;
 }
 
+#favBtn {
+    background-color: #1e1e1e;
+    color: white;
+    border: none;
+    padding: 0.5rem 1rem;
+    border-radius: 5px;
+    font-size: 1rem;
+    cursor: pointer;
+    margin-bottom: 1rem;
+    transition: background-color 0.3s;
+    display: flex;
+    justify-content: left;
+}
+
+#favBtn:hover {
+    background-color: #00ffe5;
+    color: black;
+}
