Icono de busqueda, cambios en el nav

--- a/css/indexCss.css
+++ b/css/indexCss.css
@@ -32,15 +32,27 @@ nav h2 {
 }
 
 nav a {
+    display: flex;
+    width: 100px;
     color: #ffffff;
     text-decoration: none;
-    margin-left: 1.5rem;
+    margin-left: 1rem;
     font-weight: 500;
     transition: color 0.3s ease;
+    justify-content: center;
+    align-items: center;
 }
 
 nav a:hover {
     color: #00ffe5;
+}
+
+#enlancesNav{
+    width: 600px;
+    display: flex;
+    justify-content: right;
+    align-items: center;
+    margin: 20px;
 }
 
 /* Secciones principales */
