--- a/css/listaFavoritos.css
+++ b/css/listaFavoritos.css
@@ -44,12 +44,82 @@ nav a:hover {
     color: #00ffe5;
 }
 
+/*main*/
+
+h1{
+    color: #00ffe5;
+    margin-bottom: 20px;
+}
 .fade-out {
     opacity: 0;
     transition: opacity 0.5s ease;
 }
 
+ul {
+    list-style: none;
+    padding-left: 1rem;
+ 
+}
 
+li {
+    width: 500px;
+    height: 80px;
+    background-color: #1f1f1f;
+    margin-bottom: 0.5rem;
+    padding: 0.75rem 1rem;
+    border-radius: 8px;
+    box-shadow: 0 2px 5px rgba(0, 255, 229, 0.1);
+}
+
+a{
+    font-size: 1.2rem;
+    margin-bottom: 2rem;
+    display: inline-block;
+    color: white;
+    font-weight: bold;
+    text-decoration: none;
+
+}
+
+button{
+    font-weight: bold;
+    width: 100px;
+    margin: 20px;
+    padding: 5px;
+    border-radius: 10px;
+    background-color: #00ffe5;
+    transition: color 0.3s ease;
+    border-color: #121212;
+    border-width: 3px;
+}
+
+button:hover{
+    background-color: red;
+}
+
+#favContainer{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    margin: 2rem;
+}
+#favArtistas {
+    width: 40%;
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
+    align-items: center;
+}
+
+
+#favCanciones {
+    width: 40%;
+    display: flex;
+    flex-direction: column;
+    justify-content:right;
+    align-items: center;
+}
 /*footer*/
 footer {
     background: #1e1e1e;
