--- a/css/pagError.css
+++ b/css/pagError.css
@@ -9,8 +9,12 @@ body {
     background-color: #121212;
     color: #ffffff;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    padding-bottom: 100px;
-    line-height: 1.6;
+    height: 100vh; /* altura total de la pantalla */
+    display: flex;
+    flex-direction: column;
+    justify-content: center; /* centra horizontalmente */
+    align-items: center;     /* centra verticalmente */
+    margin: 0;
 }
 /* Header y navegación */
 header {
@@ -19,89 +23,30 @@ header {
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
 }
 
-nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-wrap: wrap;
-}
-
-nav h2 {
-    font-size: 1.8rem;
-    color: #00ffe5;
-}
-
-nav a {
-    color: #ffffff;
-    text-decoration: none;
-    margin-left: 1.5rem;
-    font-weight: 500;
-    transition: color 0.3s ease;
-}
-
-nav a {
+ a {
     display: flex;
     width: 100px;
+    background: #1f1f1f;
     color: #ffffff;
     text-decoration: none;
-    margin-left: 1rem;
-    font-weight: 500;
+    font-weight: bold;
+    border-radius: 10px;
     transition: color 0.3s ease;
     justify-content: center;
     align-items: center;
+    padding: 5px;
+    box-shadow: 0 4px 8px rgba(0, 255, 229, 0.1);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
-nav a:hover {
+ a:hover {
     color: #00ffe5;
-}
-
-#enlancesNav{
-    width: 600px;
-    display: flex;
-    justify-content: right;
-    align-items: center;
-    margin: 20px;
 }
 
 /*main*/
 h1 {
     color: #e74c3c;
 }
-p {
-    font-size: 1.2rem;
-    margin-bottom: 2rem;
-}
-img {
-    max-width: 400px;
-    width: 80%;
-    height: auto;
-}
 
-/*footer*/
-footer {
-    background: #1e1e1e;
-    padding: 2rem;
-    text-align: center;
-    color: #aaa;
-}
 
-.footer-content {
-    max-width: 800px;
-    margin: 0 auto;
-}
-
-.social-icons {
-    margin-top: 1rem;
-}
-
-.social-icons a {
-    color: #aaa;
-    margin: 0 0.5rem;
-    font-size: 1.5rem;
-    transition: color 0.3s ease;
-}
-
-.social-icons a:hover {
-    color: #00ffe5;
-}
 
